-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.4.0-beta1
-
All
-
0949d09db7a3e9748b7c68998a8c68ebd5fca0be
Steps to reproduce:
- Start a new project by launching the wizard "Other Projects/Code Snippet"
- Paste in some code, ensure "Console app" is checked
- Check the generated .pr file: CONFIG += console is missing
For Gerrit Dashboard: QTCREATORBUG-18670 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
250522,2 | Fix XML-based wizards | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |