Fix XML-based wizards

We returned bogus values for everything provided via combo boxes and
check boxes due to 3e8e82b2e3.

Task-number: QTCREATORBUG-18670
Change-Id: I1b8e507ee089b99e6172b6382aceefc036da5d9e
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>